[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/back_button_click.png" type="Texture" id=1]
[ext_resource path="res://images/back_button.png" type="Texture" id=2]
[ext_resource path="res://images/back_button_hover.png" type="Texture" id=3]
[ext_resource path="res://fonts/Settings_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/Buttons for Settings.gd" type="Script" id=5]
[ext_resource path="res://images/Checkbox/Unchecked.png" type="Texture" id=6]
[ext_resource path="res://images/Checkbox/Checked.png" type="Texture" id=7]
[ext_resource path="res://Sound/Select.wav" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.4, 0.670588, 0.505882, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -437, 20 )
script = ExtResource( 5 )
fullscreen_checkbox = NodePath("MarginContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/CheckBox")
sfx_bar = NodePath("MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer3/VBoxContainer/HSlider")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 536.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 333.0
margin_top = 46.0
margin_right = 610.0
margin_bottom = 449.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 277.0
margin_bottom = 153.0
custom_constants/margin_top = 40
custom_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer"]
margin_top = 40.0
margin_right = 277.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_top = 12.0
margin_right = 181.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 185.0
margin_right = 277.0
margin_bottom = 73.0
custom_constants/margin_left = 20

[node name="CheckBox" type="CheckBox" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 92.0
margin_bottom = 73.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 5
size_flags_vertical = 5
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 6 )
expand_icon = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 157.0
margin_right = 277.0
margin_bottom = 337.0
custom_constants/margin_bottom = 40

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer2"]
margin_right = 277.0
margin_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer3"]
margin_right = 277.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer3/VBoxContainer"]
margin_right = 277.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 4 )
text = "Sound"
align = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer3/VBoxContainer"]
margin_top = 52.0
margin_right = 277.0
margin_bottom = 68.0
min_value = -80.0
max_value = 0.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer3"]
margin_top = 72.0
margin_right = 277.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer3/VBoxContainer2"]
margin_right = 277.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 4 )
text = "Music"
align = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer3/VBoxContainer2"]
margin_top = 52.0
margin_right = 277.0
margin_bottom = 68.0
value = 100.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 341.0
margin_right = 277.0
margin_bottom = 403.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 77.0
margin_right = 199.0
margin_bottom = 62.0
rect_min_size = Vector2( 122, 62 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="SelectSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "Menu"

[connection signal="toggled" from="MarginContainer/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="value_changed" from="MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer3/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
